# dioxus_starter_template

./: Cargo.toml  README.md  justfile
.cursor/rules/: global.mdc
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: tailwind.css
ui/: Cargo.toml
ui/assets/: tailwind.css
ui/src/: lib.rs
ui/src/backend_ext/: mod.rs  req_parts_counter.rs
ui/src/features/: mod.rs
ui/src/features/auth/: mod.rs
ui/src/features/auth/data/: mod.rs  repository.rs  server_functions.rs
ui/src/features/auth/domain/: entity.rs  use_cases.rs
ui/src/features/auth/presentation/: components.rs
ui/src/features/counter/data/: mod.rs  repository.rs  server_functions.rs
ui/src/features/counter/domain/: entity.rs  mod.rs  use_cases.rs
ui/src/features/counter/presentation/: components.rs  counter_display.rs  mod.rs
ui/src/server_fns/: counter.rs
