[workspace]
members = ["backend", "frontend", "ui"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.4" }
tower-sessions = { version = "0.14.0" }
tokio = { version = "1.47.1", features = ["full"] }
http = { version = "1.2.0" }
dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
ui = { path = "ui" }
frontend = { path = "frontend" }
