[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["server"] }
axum = { workspace = true }
tokio = { workspace = true }
ui = { workspace = true, features = ["server"] }
tower-sessions = { workspace = true }
torii = { workspace = true }
torii-axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
