[package]
name = "frontend"
version = "0.1.0"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
ui = { path = "../ui", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "ui/web"]
desktop = ["dioxus/desktop", "ui/desktop"]
mobile = ["dioxus/mobile", "ui/mobile"]
