[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"], optional = true }
http = "1.2.0"
tower-sessions = { version = "0.14.0", optional = true }
axum = { version = "0.8.4", optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "tokio", "tower-sessions", "axum"]
