[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
axum = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
http = { workspace = true, optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "axum", "tower-sessions", "tokio", "http"]
